# professional-scheduling-platform

./: .env.example  .env.mortgage.example  .gitignore  AI_ASSISTANT_SETUP.md  ALEMBIC_GUIDE.md  ALEMBIC_SETUP_COMPLETE.md  APPOINTMENT_TRACKING.md  AUTO_RANKING_FEATURE.md  AUTO_RANKING_IMPLEMENTATION.md  BUG_FIXES_DATE_OFFSET.md  BUG_FIX_MISSING_FIRST_OCCURRENCE.md  CALENDAR_CONSOLIDATION_PLAN.md  CLIENT_MANAGEMENT.md  COMPLETION_CHECKLIST.md  CSV_CLIENT_DISPLAY_FIX.md  CSV_QUICKSTART.md  CSV_UPLOAD_GUIDE.md  CSV_UPLOAD_IMPLEMENTATION.md  CSV_UPLOAD_README.md  CSV_VALIDATION_UPDATE.md  IMPLEMENTATION_SUMMARY.md  INSTANCE_ID_ARCHITECTURE.md  LAZY_LOADING_ARCHITECTURE.md  LEARNING_ROADMAP.md  PROFESSIONAL_REFACTORING_GUIDE.md  QUICK_WINS_COMPLETED.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  REFACTORING_PROGRESS.md  REFERRAL_IMPLEMENTATION.md  REFERRAL_TRACKING.md  SEARCH_FEATURE.md  SEARCH_IMPLEMENTATION.md  SECURITY_ASSESSMENT.md  START_SERVER.md  STOPWATCH_COMPLETE.md  TECHNICAL_DEBT_ASSESSMENT.md  TECH_DEBT_ASSESSMENT.md  TESTING_CUSTOMER_CHAT.md  (+26 more)
.github/: copilot-instructions.md
alembic/: env.py
docs/: COLOR_PALETTE.md  LIGHT_THEME_GUIDE.md  MIGRATION.md  PROJECT_STRUCTURE.md  UI_TRANSFORMATION.md
scripts/: FFMPEG_PARAMETERS_EXPLAINED.md  MORTGAGE_PAYMENT_README.md  QUICKSTART.md  VIDEO_COMPRESSION_GUIDE.md  add_workplaces.py  check_consolidation.py  compress_video.py  inspect_mortgage_site.py  migrate.sh  migrate_add_client_profiles.py  migrate_add_referrals.py  migrate_legacy_bookings.py  pay_mortgage.py  populate_db.py  start_server.py  (+1 more)
(+68 files in other folders)
