[project]
name = "calendar-app"
version = "0.1.0"
description = ""
authors = [
    {name = "bbaltazar",email = "bta.baltazar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pydantic[email] (>=2.12.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=4.0.2,<5.0.0)",
    "twilio (>=9.8.3,<10.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx (>=0.25.0,<0.26.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "calendar_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
